--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.hibernate:hibernate-core-jakarta:5.5.6.Final'
+	implementation 'org.hibernate:hibernate-entitymanager:5.4.2.Final' // EntityManager를 위한 의존성
+	implementation 'javax.persistence:javax.persistence-api:2.2' // JPA 2.2 API
+	implementation 'mysql:mysql-connector-java:8.0.13'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
@@ -35,9 +40,14 @@ dependencies {
 	// #### TEST ######
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-web'
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.apache.commons:commons-lang3:3.12.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	testImplementation 'org.hibernate:hibernate-core-jakarta:5.5.6.Final'
+	testImplementation 'org.hibernate:hibernate-entitymanager:5.5.6.Final' // EntityManager를 위한 의존성
+	testImplementation 'javax.persistence:javax.persistence-api:2.2' // JPA 2.2 API
 
 }
 
